--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -10,11 +10,29 @@ jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - run: flutter pub get && flutter build web --release
-      - uses: FirebaseExtended/action-hosting-deploy@v0
+      - uses: actions/checkout@v3
+
+      # ① Node.js gerekiyorsa
+      - uses: actions/setup-node@v3
         with:
-          repoToken: ${{ secrets.GITHUB_TOKEN }}
-          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_NETMEDYA_GRUP }}
-          channelId: live
-          projectId: netmedya-grup
+          node-version: "18"
+
+      # ② Flutter kurulumu
+      - uses: subosito/flutter-action@v2
+        with:
+          flutter-version: "stable" # veya spesifik bir sürüm
+
+      # ③ Flutter paketlerini indir ve Web build oluştur
+      - name: Install & build Flutter Web
+        run: |
+          flutter pub get
+          flutter build web --release
+
+      # ④ Firebase CLI kurulumu
+      - run: npm install -g firebase-tools
+
+      # ⑤ Deploy
+      - name: Deploy to Firebase Hosting
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+        run: firebase deploy --only hosting --token "$FIREBASE_TOKEN"
