--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -18,10 +18,10 @@ jobs:
           node-version: "18"
 
       # Flutter kurulumu (subosito kullan, channel olarak stable ver)
-      - uses: subosito/flutter-action@v2
+      - uses: flutter/setup-flutter@v2
         with:
-          channel: stable # stable kanalı indirilecek
-          cache: true # sonraki sefer hızlandırır
+          channel: stable
+          version: latest
 
       # Flutter paketlerini indir ve Web build oluştur
       - name: Install & build Flutter Web
