--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -18,10 +18,11 @@ jobs:
           node-version: "18"
 
       # Flutter kurulumu (subosito kullan, channel olarak stable ver)
-      - uses: flutter/setup-flutter@v2
+      - uses: subosito/flutter-action@v2
         with:
-          channel: stable
-          version: latest
+          flutter-version: "3.32.2" # kullandığınız sürümü buraya sabitleyin
+          channel: "stable"
+          cache: true
 
       # Flutter paketlerini indir ve Web build oluştur
       - name: Install & build Flutter Web
