--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -17,10 +17,11 @@ jobs:
         with:
           node-version: "18"
 
-      - name: Setup Flutter
-        uses: flutter/setup-flutter@v2
+      - name: Setup Flutter (latest stable)
+        uses: subosito/flutter-action@v2
         with:
-          flutter-version: "stable"
+          channel: stable # en son stable sürümü alır
+          cache: true
 
       # Flutter paketlerini indir ve Web build oluştur
       - name: Install & build Flutter Web
